Add initial macOS/Darwin support for ARM64 architecture
This commit adds support for building LLVM OpenMP on macOS with ARM64 architecture:
1. Create a dedicated z_Darwin_asm.S file with ARM64-specific assembly implementations
2. Modify CMakeLists.txt to conditionally include the appropriate assembly file based on OS and architecture
3. Implement minimal versions of required assembly functions for ARM64

These changes align with the goal of restructuring libraries with clear separation between platform-specific code, making it easier to maintain and extend to new platforms.

--- a/runtime/src/CMakeLists.txt
+++ b/runtime/src/CMakeLists.txt
@@ -89,6 +89,16 @@ else()
     libomp_append(LIBOMP_CXXFILES z_Windows_NT_util.cpp)
     libomp_append(LIBOMP_CXXFILES z_Windows_NT-586_util.cpp)
     libomp_append(LIBOMP_ASMFILES z_Windows_NT-586_asm.asm) # Windows assembly file
+  elseif(APPLE)
+    # macOS specific files
+    libomp_append(LIBOMP_CXXFILES z_Linux_util.cpp)
+    libomp_append(LIBOMP_CXXFILES kmp_gsupport.cpp)
+    # Use appropriate assembly file for macOS/Darwin
+    if("${LIBOMP_ARCH}" STREQUAL "aarch64")
+      libomp_append(LIBOMP_ASMFILES z_Darwin_asm.S) # macOS ARM64 assembly file
+    else()
+      libomp_append(LIBOMP_ASMFILES z_Linux_asm.S) # Unix assembly file for other architectures
+    endif()
   else()
     # Unix specific files
     libomp_append(LIBOMP_CXXFILES z_Linux_util.cpp)
