Add comprehensive test suite for Lithe-OpenMP integration
This commit adds a comprehensive test suite for the Lithe-OpenMP integration:

1. Create a test framework for consistent test execution and reporting
   - Add test_framework.h with assertion macros and test runner utilities

2. Add test files for different aspects of OpenMP functionality with Lithe:
   - test_parallel.c: Tests basic parallel region functionality
   - test_worksharing.c: Tests OpenMP worksharing constructs (for, sections, reduction)
   - test_synchronization.c: Tests synchronization primitives (critical, barrier, atomic, locks)
   - test_lithe_integration.c: Tests specific Lithe-OpenMP integration points

3. Add test runner infrastructure:
   - Update CMakeLists.txt to build all test executables
   - Add run_tests.sh script to automate test execution

These tests verify that the Lithe integration works correctly with OpenMP and
follows the platform-specific code separation principles from our restructuring plan.

--- a/runtime/test/lithe/CMakeLists.txt
+++ b/runtime/test/lithe/CMakeLists.txt
@@ -1,7 +1,7 @@
-# CMakeLists.txt for Lithe integration test
+# CMakeLists.txt for Lithe integration tests
 
 cmake_minimum_required(VERSION 3.10)
-project(lithe_test C)
+project(lithe_tests C)
 
 # Find OpenMP package
 find_package(OpenMP REQUIRED)
@@ -24,19 +24,42 @@ find_library(LITHE_LIBRARY
   NO_DEFAULT_PATH
 )
 
-# Add the executable
-add_executable(lithe_test lithe_test.c)
+# Find DL library for dynamic loading tests
+find_library(DL_LIBRARY dl)
 
-# Include directories
+# Set include directories
 include_directories(${LITHE_INCLUDE_DIR})
 
-# Link against OpenMP and Lithe
+# Basic test executable
+add_executable(lithe_test lithe_test.c)
 target_link_libraries(lithe_test PRIVATE OpenMP::OpenMP_C ${LITHE_LIBRARY})
 
-# Add custom target to run the test
-add_custom_target(run_lithe_test
-  COMMAND ./lithe_test
-  DEPENDS lithe_test
+# Test suite executables
+add_executable(test_parallel tests/test_parallel.c)
+target_link_libraries(test_parallel PRIVATE OpenMP::OpenMP_C ${LITHE_LIBRARY})
+
+add_executable(test_worksharing tests/test_worksharing.c)
+target_link_libraries(test_worksharing PRIVATE OpenMP::OpenMP_C ${LITHE_LIBRARY})
+
+add_executable(test_synchronization tests/test_synchronization.c)
+target_link_libraries(test_synchronization PRIVATE OpenMP::OpenMP_C ${LITHE_LIBRARY})
+
+add_executable(test_lithe_integration tests/test_lithe_integration.c)
+target_link_libraries(test_lithe_integration PRIVATE OpenMP::OpenMP_C ${LITHE_LIBRARY} ${DL_LIBRARY})
+
+# Make the test runner script executable
+add_custom_command(
+  OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh
+  COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/run_tests.sh ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh
+  COMMAND chmod +x ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh
+  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/run_tests.sh
+  COMMENT "Copying test runner script"
+)
+
+# Add custom target to run all tests
+add_custom_target(run_all_tests
+  COMMAND ./run_tests.sh
+  DEPENDS lithe_test test_parallel test_worksharing test_synchronization test_lithe_integration ${CMAKE_CURRENT_BINARY_DIR}/run_tests.sh
   WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
-  COMMENT "Running Lithe integration test"
+  COMMENT "Running all Lithe integration tests"
 )
